apps/pihole/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-web
  namespace: networking
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: pihole.zieqs.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web
                port:
                  number: 80
